# open-rmf-practice

./: .gitignore  .rmf_schedule_node.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  트러블슈팅.md
controller/libi-drive-controller/src/libi_drive/: README.md
controller/libi-drive-controller/src/pinky_pro/: VENDORED.md
controller/libi-drive-controller/src/pinky_pro/pinky_description/launch/: upload_robot.launch.py
controller/libi-drive-controller/src/pinky_pro/pinky_description/urdf/: pinky.urdf.xacro  pinky_gz_slotcar.urdf.xacro  pinky_slotcar.urdf.xacro  robot.urdf.xacro
controller/libi-drive-controller/src/pinky_pro/pinky_gz_sim/launch/: launch_sim.launch.xml
controller/libi-drive-controller/src/pinky_pro/pinky_gz_sim/worlds/: new_map.sdf
controller/libi-drive-controller/src/pinky_pro/pinky_navigation/: CMakeLists.txt
controller/libi-drive-controller/src/pinky_pro/pinky_navigation/launch/: gz_bringup_launch.xml  gz_web_nav2.launch.xml  localization_launch.xml
controller/libi-drive-controller/src/pinky_pro/pinky_navigation/params/: nav2_params.yaml
controller/libi-drive-controller/src/pinky_pro/pinky_navigation/rviz/: nav2_view.rviz
controller/libi-handy-controller/src/libi_handy/: README.md
docs/: aba-architecture.md  fleet-adapter-architecture.md  rmf_packages.html  study-plan.md
fleet/src/libi_rmf_bridge/: README.md
fleet/src/libi_rmf_bringup/: CMakeLists.txt  README.md  package.xml
fleet/src/libi_rmf_bringup/launch/: libi_rmf.launch.xml
fleet/src/libi_rmf_fleet_adapter/: README.md  package.xml  setup.cfg  setup.py
fleet/src/libi_rmf_fleet_adapter/config/: libi_fleet_config.yaml
fleet/src/libi_rmf_fleet_adapter/launch/: fleet_adapter.launch.xml
fleet/src/libi_rmf_fleet_adapter/libi_rmf_fleet_adapter/: fleet_adapter.py  fleet_manager.py
fleet/src/libi_rmf_maps/: README.md
fleet/src/libi_rmf_tasks/: README.md  package.xml  setup.cfg  setup.py
fleet/src/libi_rmf_tasks/libi_rmf_tasks/: dispatch_delivery.py
scripts/: libi_kill.sh  libi_sim.sh  rmf.sh
scripts/rmf/: fix_navgraph.py  make_navgraph.sh  pairs.example.yaml  robot_state_to_tf.py  set_initial_pose.sh  show_navgraph.py  sim_view.launch.py  sim_view.rviz  slotcar_drive.py  view_map.launch.py  view_map.rviz
service/labi_bot/: README.md
