<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libi_rmf_fleet_adapter</name>
  <version>0.0.0</version>
  <description>libi RMF fleet adapter — EasyFullControl Python port of rmf_demos_fleet_adapter (slotcar backend, M2~M4). Study repo. C++ rewrite planned for the real project.</description>
  <maintainer email="dlrkdxor0821@gmail.com">leekt</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>launch_xml</exec_depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>rmf_task_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
