<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libi_rmf_tasks</name>
  <version>0.0.0</version>
  <description>libi RMF tasks — 배달(delivery) task dispatch + 팔 perform_action (M4). Study repo.</description>
  <maintainer email="dlrkdxor0821@gmail.com">leekt</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rmf_task_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
